# rrcad

./: .clang-format  .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  audit.toml  build.rs  teapot.step
.cargo/: config.toml
.claude/: settings.json
.claude/skills/code-review/: SKILL.md
.claude/skills/docs-engineering/: SKILL.md
.claude/skills/release-engineering/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.github/workflows/: rust.yml
doc/: TODOs.md  api.md  bucket.rb  bucket.stl  development.md  split_tkl_keyboard.stl  troubleshooting.md  user-guide.md
mruby_configs/: mcp_safe.gembox  rrcad.rb
samples/: 01_hello_box.rb  02_boolean_ops.rb  03_transforms.rb  04_bracket.rb  05_export_formats.rb  06_live_preview.rb  07_teapot.rb  08_box_sizes.csv  08_parametric_box.rb  README.md  pen_schmidt.rb  split_tkl_keyboard.rb
scripts/: clean-build.sh
src/: lib.rs  main.rs
src/mcp/: mod.rs
src/occt/: bridge.cpp  bridge.h  mod.rs
src/preview/: mod.rs  server.rs  viewer.html
src/ruby/: ffi.rs  glue.c  mod.rs  native.rs  prelude.rb  vm.rs
tests/: e2e_dsl.rs  mcp_stress.rs  mcp_tools.rs  occt_layer.rs  phase2_dsl.rs  phase3_selectors.rs  phase4_3d_ops.rs  phase5_params.rs  phase7_tier1.rs  phase7_tier2.rs  phase7_tier3.rs  phase8_tier1.rs  phase8_tier2.rs  phase8_tier3.rs  phase8_tier4.rs  phase8_tier5.rs  prelude_layer.rs  sketch_profiles.rs  teapot_dsl.rs  teapot_sample.rs  vm_layer.rs
